--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
 .img-profile {
   object-fit: fill;
 }
+
+@media (min-width: 992px) {
+  .hackace-logo {
+    height: 400px;
+  }
+}
+
+@media (max-width: 991px) {
+  .hackace-logo {
+    height: 200px;
+  }
+}
